# heavyai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Jenkinsfile  LICENSE.md  Makefile  README.md  README.rst  docker-compose.yml  environment-release.yml  environment.yml  environment_gpu.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yaml  sonarsast.yml  test.yml
.heavydb/: heavy.conf
ci/: Dockerfile  build-conda.sh  environment.yml  environment_gpu.yml  install-test-deps-conda.sh  install-test-deps-pip.sh  requirements.txt  test-rbc.sh
conda/recipes/cpu-only/: meta.yaml
conda/recipes/gpu/: meta.yaml
docs/: Makefile  make.bat  requirements.txt
docs/source/: api.rst  conf.py  contributing.rst  faq.rst  index.rst  releasenotes.rst  usage.rst
heavyai/: __init__.py  _loaders.py  _pandas_loaders.py  _utils.py  connection.py  ipc.py
pyomnisci/: __init__.py  _mutators.py  _pandas_loaders.py  _transforms.py  _utils.py  connection.py
scripts/: bench.py  local_build.sh  local_test.sh  run_tests.sh
tests/: conftest.py  test_data_no_nulls_cpu.py  test_deallocate.py  test_integration.py  test_loaders.py  test_package.py
tests/data/: dashboard_metadata.py
