[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "pyomnisci/_version.py"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ["py36", "py37", "py38"]
exclude = "tests/data|omnisci|docs|benchmarks|scripts|.eggs"
